--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
-# https://dart.dev/guides/libraries/private-files
-# Created by `dart pub`
+# Files and directories created by pub.
 .dart_tool/
+.packages
+
+# Conventional directory for build output.
+build/
