--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,15 +1,14 @@
-name: aula3
-description: A sample command-line application with basic argument parsing.
-version: 0.0.1
-# repository: https://github.com/my_org/my_repo
+name: dart_exceptions
+description: A simple command-line application.
+version: 1.0.0
+# homepage: https://www.example.com
 
 environment:
-  sdk: ^3.2.3
+  sdk: '>=2.14.4 <3.0.0'
 
-# Add regular dependencies here.
-dependencies:
-  args: ^2.4.2
+
+# dependencies:
+#   path: ^1.8.0
 
 dev_dependencies:
-  lints: ^2.1.0
-  test: ^1.24.0
+  lints: ^1.0.0
