--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
-name: dart_exceptions
+name: curso_5_dart_assincronismo
 description: A simple command-line application.
 version: 1.0.0
 # homepage: https://www.example.com
 
 environment:
-  sdk: '>=2.14.4 <3.0.0'
+  sdk: '>=2.15.1 <3.0.0'
 
 
 # dependencies:
